--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,10 +32,13 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y build-essential cmake ninja-build gcc g++ libffi-dev
+        sudo ln -s /usr/bin/gcc /usr/bin/cc
+        sudo ln -s /usr/bin/g++ /usr/bin/c++
 
     - name: Install Python Dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install meson
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
   
     - name: Setup Flutter
